--- a/tic_tac_toe_web/main.css
+++ b/tic_tac_toe_web/main.css
@@ -16,13 +16,33 @@ html, body {
 
 .gameBoard{
 	display: none;
-	: 0.2rem;
 }
 
 
-.center{
-	margin: 0 auto;
+.containerLogin { 
+	height: 200px;
+	position: relative;
+	border: 3px;/* solid green;*/ 
 }
+  
+.centerLogin {
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+.centerButton {
+	margin-top: 70px;
+	margin-left: 10px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+  }
 
 .container {
 	display: flex;
@@ -42,6 +62,7 @@ html, body {
 	background: #EAECF0;
 	border-radius: 5px;
 	box-shadow: -3px -3px 7px #ffffffb2, 3px 3px 5px rgba(94, 104, 121, 0.245);
+	margin: 10px;
  
  }
 
@@ -104,17 +125,21 @@ input{
 	border-radius: 5px;
 	box-shadow: inset -3px -3px 7px #ffffffff, inset 3px 3px 5px rgba(94, 104, 121, 0.292);
 	color: #0082CA;
+	border-width: 0px;
+
  }
  
  button:focus {
 	background: #EAECF0;
 	border-radius: 5px;
 	box-shadow: inset -3px -3px 7px #ffffffff, inset 3px 3px 5px rgba(94, 104, 121, 0.292);
-		color: #0082CA;
+	color: #0082CA;
  
-		 outline: thin dotted;
-	 outline: 0px auto -webkit-focus-ring-color;
-	 outline-offset: 0px;
+	outline: thin dotted;
+	/*outline: 0px auto -webkit-focus-ring-color;*/
+	outline-offset: 0px;
+	border-width: 0px;
+
  
  }
  
@@ -123,6 +148,8 @@ input{
 	border-radius: 5px;
 	box-shadow: inset -3px -3px 7px #ffffffff, inset 3px 3px 5px rgba(94, 104, 121, 0.292);
 	color: #74C6FC;
+	border-width: 0px;
+
  
  }
  .font_button{
@@ -135,17 +162,41 @@ input{
 	 font-size: 16px;
 	 font-family: arial;
  }
+ .nav-tabs {
+    border-bottom: 1px solid #98A6BD;
+}
 
-.aba{
+.abas{
 	border-width: 0px;
+	position:fixed;
+	left:0;
+	top:0
 	
+
+	border-width: 0px;
 	background: #EAECF0;
 	border-radius: 5px;
-	box-shadow: -3px -3px 7px #ffffffb2, 3px 3px 5px rgba(94, 104, 121, 0.245);
-	color: #98A6BD;
-	font-size: 16px;
-	margin-top: 10px;
+	/*box-shadow: -3px -3px 7px #ffffffb2, 3px 3px 5px rgba(94, 104, 121, 0.245);*/
 
+	font-size: 20px;
+	font-family: Helvetica;
+	
+	justify-content: left;
+	align-items: left;
+
+	padding-left: 150px;
+	padding-right: 100px;
+	padding-botton : 150px;
+
+}
+
+.button_aba{
+	padding: 10px;
+	border-radius: 0.5px;
+	/*margin: 10px;*/
+
+	border-width: 0px;
+	
 	justify-content: left;
 	align-items: left;
 }
