--- a/tic_tac_toe_web/index.css
+++ b/tic_tac_toe_web/index.css
@@ -53,9 +53,26 @@ html, body {
 	background: #EAECF0;
 	font-family: Helvetica;
 	color: #555;
- }
+	max-width: 100%;
+	min-width: 100%;
+}
  
- 
+.login{
+	text-align: center; 
+	font-size: 40px;
+}
+.title{
+	text-align: justify; 
+	font-size: 40px;
+}
+.instrucoes{
+	text-align: justify; 
+	font-size: 25px;
+}
+.containerAbas{
+	padding-top: 50px;
+	padding-left: 200px;
+}
  .neumorphism-1 {
 	border-width: 0px;
 	
@@ -184,9 +201,7 @@ input{
 	justify-content: left;
 	align-items: left;
 
-	padding-left: 150px;
-	padding-right: 100px;
-	padding-botton : 150px;
+	
 
 }
 
@@ -209,5 +224,16 @@ input{
 .items:target {display: block;}
 .items:not(:target) {display: none;}
 .items:target {display: block;}
+
+.abasExid{
+    width: 100%;
+    height:100%;
+    border: 13px solid #bed5cd;
+    overflow-x: scroll;
+    overflow-y: hidden;
+	white-space: nowrap;
+	position: static;
+}
+
 
 /*https://www.w3.org/Style/Examples/007/target.pt_BR.html#tab1*/
