--- a/tic_tac_toe_web/index.css
+++ b/tic_tac_toe_web/index.css
@@ -4,6 +4,7 @@
 	font-size: 60px;
 	font-family: Helvetica;
 
+	padding: 0;
 	border-width: 0px;
 	background: #EAECF0;
 	border-radius: 5px;
@@ -11,11 +12,13 @@
 }
 
 html, body {
-	overflow: hidden;
+	overflow: auto;
 }
 
 .gameBoard{
 	display: none;
+	text-align: center;
+	font-size: 20px;
 }
 
 
@@ -32,6 +35,20 @@ html, body {
 	left: 50%;
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
+}
+
+.logo{
+	margin: 0;
+	text-align: justify; 
+	font-size: 40px;
+	font-family: Helvetica;
+	padding-bottom: 5px;
+}
+
+.center{
+	margin: auto;
+  	/*border: 3px solid green;*/
+  	padding: 10px;
 }
 
 .centerButton {
@@ -65,13 +82,20 @@ html, body {
 	text-align: justify; 
 	font-size: 40px;
 }
+
 .instrucoes{
 	text-align: justify; 
 	font-size: 25px;
+	font-family: Helvetica;
+
 }
 .containerAbas{
-	padding-top: 50px;
-	padding-left: 200px;
+	padding-top: 0%;
+	padding-left: 0%;
+}
+.containerMenu{
+	padding-top: 5%;
+	padding-left: 25%;
 }
  .neumorphism-1 {
 	border-width: 0px;
